--- a/src/main/resources/templates/reset-password.html
+++ b/src/main/resources/templates/reset-password.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Đổi mật khẩu</title>
+    <title>Change your password</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <!--    <link rel="icon" type="image/x-icon"-->
@@ -19,13 +19,13 @@
             <div class="col-8 offset-2 mt-5">
                 <div class="card">
                     <div class="card-header">
-                        <h2 class="text-center">Đổi mật khẩu</h2>
+                        <h2 class="text-center">Change your password</h2>
                     </div>
                     <div class="card-body">
                         <form action="/forgot-password" method="post">
                         	<input type="hidden" name="token" th:value="${token}" />
                             <div class="form-group">
-                                <label for="name">Tên người dùng</label>
+                                <label for="name">Username</label>
                                 <input type="text" name="name" id="name" class="form-control" readonly
                                     th:value="${name}">
                             </div>
@@ -35,16 +35,16 @@
                                     th:value="${email}">
                             </div>
                             <div class="form-group">
-                                <label for="password">Mật khẩu</label>
+                                <label for="password">your password</label>
                                 <input type="password" name="password" id="password" class="form-control" th:value="${password}">
-                                <small th:if="${errorPassword}!=null" class="text-danger">Mật khẩu > 6 kí tự</small>
+                                <small th:if="${errorPassword}!=null" class="text-danger">your password > 6 kí tự</small>
                             </div>
                             <div class="form-group">
-                                <label for="confirm">Nhập lại mật khẩu</label>
+                                <label for="confirm">Nhập lại your password</label>
                                 <input type="password" name="confirm" id="confirm" class="form-control" th:value="${confirm}">
-                                <small th:if="${errorConfirm}!=null" class="text-danger">Mật khẩu không trùng</small>
+                                <small th:if="${errorConfirm}!=null" class="text-danger">your password không trùng</small>
                             </div>
-                            <button class="btn btn-success mt-2">Đổi mật khẩu</button>
+                            <button class="btn btn-success mt-2">Change your password</button>
                         </form>
                     </div>
                 </div>
