--- a/src/main/resources/templates/done.html
+++ b/src/main/resources/templates/done.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Chúc mừng bạn đã Change your password successfully</title>
+    <title>Change your password successfully</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <!--    <link rel="icon" type="image/x-icon"-->
@@ -15,8 +15,8 @@
 
 <body>
     <div class="container text-center mt-5">
-        <h1 style="color: #28a745;">Chúc mừng bạn đã Change your password successfully!</h1>
-        <h3 class="mt-4" style="color: #28a745;">Đóng tab và thử đăng nhập lại</h3>
+        <h1 style="color: #28a745;">Change password successfully!</h1>
+        <h3 class="mt-4" style="color: #28a745;">Close tab and login again</h3>
     </div>
     
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
