--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Lỗi</title>
+    <title>Error</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <!--    <link rel="icon" type="image/x-icon"-->
@@ -15,7 +15,7 @@
 
 <body>
     <div class="container text-center mt-5">
-        <h1 style="color: rgb(255, 0, 0);">Đã xảy ra lỗi!</h1>
+        <h1 style="color: rgb(255, 0, 0);">Error!</h1>
     </div>
     
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
