--- a/src/main/resources/templates/reset-password.html
+++ b/src/main/resources/templates/reset-password.html
@@ -35,14 +35,14 @@
                                     th:value="${email}">
                             </div>
                             <div class="form-group">
-                                <label for="password">your password</label>
+                                <label for="password">Your password</label>
                                 <input type="password" name="password" id="password" class="form-control" th:value="${password}">
-                                <small th:if="${errorPassword}!=null" class="text-danger">your password > 6 kí tự</small>
+                                <small th:if="${errorPassword}!=null" class="text-danger">Password must have more than 6 characters</small>
                             </div>
                             <div class="form-group">
-                                <label for="confirm">Nhập lại your password</label>
+                                <label for="confirm">Enter your password again</label>
                                 <input type="password" name="confirm" id="confirm" class="form-control" th:value="${confirm}">
-                                <small th:if="${errorConfirm}!=null" class="text-danger">your password không trùng</small>
+                                <small th:if="${errorConfirm}!=null" class="text-danger">Password not match</small>
                             </div>
                             <button class="btn btn-success mt-2">Change your password</button>
                         </form>
